--- a/data/transfer_test.1
+++ b/data/transfer_test.1
@@ -56419,4 +56419,2335 @@ V O
 。 O
 
 。 O
+一 O
+般 O
+性 O
+要 O
+点 O
+。 O
+校 B-location
+舍 I-location
+以 O
+及 O
+各 B-location
+教 I-location
+学 I-location
+区 I-location
+， O
+有 O
+标 O
+示 O
+清 O
+楚 O
+危 O
+险 O
+地 O
+区 O
+， O
+禁 O
+止 O
+师 B-person_name
+生 I-person_name
+进 O
+入 O
 
+校 B-location
+舍 I-location
+建 B-product_name
+筑 I-product_name
+修 O
+缮 O
+时 O
+， O
+应 O
+注 O
+意 O
+安 B-product_name
+全 I-product_name
+围 I-product_name
+篱 I-product_name
+及 O
+警 B-product_name
+告 I-product_name
+标 I-product_name
+示 I-product_name
+以 O
+维 O
+安 O
+全 O
+
+学 B-location
+校 I-location
+应 O
+备 O
+有 O
+急 O
+救 O
+物 O
+品 O
+， O
+并 O
+定 O
+有 O
+送 O
+医 O
+管 O
+道 O
+以 O
+应 O
+意 O
+外 O
+伤 O
+害 O
+发 O
+生 O
+即 O
+时 O
+救 O
+助 O
+。 O
+承 B-person_name
+办 I-person_name
+人 I-person_name
+定 O
+期 O
+检 O
+查 O
+并 O
+送 O
+组 B-person_name
+长 I-person_name
+查 O
+核 O
+， O
+每 O
+周 O
+送 O
+主 B-person_name
+任 I-person_name
+查 O
+核 O
+， O
+每 O
+月 O
+送 O
+校 B-person_name
+长 I-person_name
+查 O
+核 O
+。 O
+确 O
+实 O
+执 O
+行 O
+公 O
+务 O
+保 O
+管 O
+制 O
+度 O
+， O
+实 O
+施 O
+定 O
+期 O
+与 O
+不 O
+定 O
+期 O
+保 O
+养 O
+及 O
+维 O
+修 O
+以 O
+常 O
+保 O
+安 O
+全 O
+。 O
+确 O
+实 O
+依 O
+法 O
+执 O
+行 O
+修 O
+缮 O
+办 O
+法 O
+。 O
+校 B-location
+舍 I-location
+空 I-location
+间 I-location
+无 O
+闲 O
+置 O
+情 O
+形 O
+。 O
+逃 B-product_name
+生 I-product_name
+路 I-product_name
+线 I-product_name
+与 O
+疏 B-product_name
+散 I-product_name
+路 I-product_name
+线 I-product_name
+是 O
+否 O
+推 O
+积 O
+杂 O
+物 O
+影 O
+响 O
+通 O
+行 O
+。 O
+危 O
+险 O
+物 O
+品 O
+储 O
+放 O
+及 O
+管 O
+理 O
+是 O
+否 O
+符 O
+合 O
+安 O
+全 O
+。 O
+校 B-location
+园 I-location
+内 O
+无 O
+地 B-product_name
+坪 I-product_name
+滑 O
+动 O
+、 O
+地 B-product_name
+坪 I-product_name
+塌 O
+陷 O
+现 O
+象 O
+。 O
+挡 B-product_name
+土 I-product_name
+墙 I-product_name
+、 O
+边 B-product_name
+坡 I-product_name
+无 O
+裂 O
+缝 O
+或 O
+倾 O
+斜 O
+。 O
+无 O
+基 B-product_name
+础 I-product_name
+下 O
+陷 O
+或 O
+建 B-product_name
+筑 I-product_name
+物 I-product_name
+倾 O
+斜 O
+的 O
+现 O
+象 O
+门 B-product_name
+/ O
+窗 B-product_name
+/ O
+墙 B-product_name
+/ O
+天 B-product_name
+花 I-product_name
+板 I-product_name
+/ O
+柱 B-product_name
+/ O
+地 B-product_name
+板 I-product_name
+。 O
+校 B-product_name
+门 I-product_name
+门 I-product_name
+锁 I-product_name
+警 I-product_name
+示 I-product_name
+及 O
+断 B-product_name
+电 I-product_name
+系 I-product_name
+统 I-product_name
+无 O
+损 O
+坏 O
+， O
+操 O
+作 O
+使 O
+用 O
+正 O
+常 O
+
+楼 B-product_name
+梯 I-product_name
+门 I-product_name
+、 O
+电 B-product_name
+动 I-product_name
+门 I-product_name
+（ O
+铁 B-product_name
+卷 I-product_name
+门 I-product_name
+） O
+无 O
+损 O
+坏 O
+故 O
+障 O
+， O
+使 O
+用 O
+正 O
+常 O
+， O
+电 B-product_name
+动 I-product_name
+门 I-product_name
+启 O
+动 O
+时 O
+是 O
+否 O
+有 O
+警 O
+示 O
+管 O
+理 O
+
+各 O
+类 O
+门 B-product_name
+锁 I-product_name
+（ O
+教 B-location
+室 I-LAC
+、 O
+仓 B-location
+库 I-location
+） O
+无 O
+损 O
+坏 O
+故 O
+障 O
+， O
+使 O
+用 O
+正 O
+常 O
+。 O
+窗 B-product_name
+户 I-product_name
+框 I-product_name
+无 O
+损 O
+坏 O
+故 O
+障 O
+或 O
+是 O
+变 O
+形 O
+现 O
+象 O
+， O
+使 O
+用 O
+正 O
+常 O
+。 O
+窗 B-product_name
+户 I-product_name
+玻 I-product_name
+璃 I-product_name
+无 O
+破 O
+损 O
+现 O
+象 O
+， O
+能 O
+抵 O
+挡 O
+风 O
+雨 O
+。 O
+安 O
+装 O
+防 B-product_name
+盗 I-product_name
+设 I-product_name
+施 I-product_name
+者 O
+， O
+无 O
+锈 O
+损 O
+及 O
+断 O
+裂 O
+现 O
+象 O
+。 O
+外 B-product_name
+墙 I-product_name
+是 O
+否 O
+无 O
+外 B-product_name
+砖 I-product_name
+剥 O
+落 O
+、 O
+0 O
+. O
+3 O
+c O
+m O
+以 O
+上 O
+之 O
+裂 O
+缝 O
+、 O
+油 B-product_name
+漆 I-product_name
+剥 O
+落 O
+或 O
+是 O
+油 B-product_name
+漆 I-product_name
+渗 O
+水 O
+现 O
+象 O
+。 O
+内 B-product_name
+墙 I-product_name
+无 O
+出 O
+现 O
+裂 O
+缝 O
+现 O
+象 O
+。 O
+围 B-product_name
+墙 I-product_name
+无 O
+倾 O
+斜 O
+及 O
+裂 O
+缝 O
+或 O
+混 B-product_name
+凝 I-product_name
+土 I-product_name
+剥 O
+落 O
+现 O
+象 O
+。 O
+梁 B-product_name
+无 O
+倾 O
+斜 O
+及 O
+梁 B-product_name
+无   O
+龟 O
+裂 O
+现 O
+象 O
+。 O
+天 B-product_name
+花 I-product_name
+板 I-product_name
+无 O
+呈 O
+现 O
+龟 O
+裂 O
+、 O
+钢 B-product_name
+筋 I-product_name
+外 O
+漏 O
+或 O
+锈 O
+蚀 O
+现 O
+象 O
+。 O
+天 B-product_name
+花 I-product_name
+板 I-product_name
+无 O
+漏 O
+水 O
+、 O
+混 B-product_name
+凝 I-product_name
+土 I-product_name
+剥 O
+落 O
+及 O
+明 O
+显 O
+变 O
+形 O
+或 O
+0 O
+. O
+3 O
+c O
+m O
+以 O
+上 O
+之 O
+裂 O
+缝 O
+现 O
+象 O
+。 O
+天 B-product_name
+花 I-product_name
+板 I-product_name
+油 B-product_name
+漆 I-product_name
+无 O
+脱 O
+落 O
+或 O
+掉 O
+落 O
+水 B-product_name
+泥 I-product_name
+块 I-product_name
+。 O
+天 B-product_name
+花 I-product_name
+板 I-product_name
+材 O
+质 O
+材 O
+料 O
+未 O
+被 O
+白 O
+蚁 O
+侵 O
+入 O
+或 O
+白 O
+蚁 O
+破 O
+坏 O
+。 O
+室 B-location
+内 I-location
+悬 B-product_name
+吊 I-product_name
+物 I-product_name
+（ O
+灯 B-product_name
+具 I-product_name
+、 O
+吊 B-product_name
+扇 I-product_name
+、 O
+影 B-product_name
+视 I-product_name
+设 I-product_name
+备 I-product_name
+） O
+是 O
+否 O
+松 O
+脱 O
+。 O
+柱 B-product_name
+无 O
+倾 O
+斜 O
+、 O
+龟 O
+裂 O
+、 O
+混 B-product_name
+凝 I-product_name
+土 I-product_name
+剥 O
+落 O
+及 O
+钢 B-product_name
+筋 I-product_name
+外 O
+漏 O
+或 O
+锈 O
+蚀 O
+现 O
+象 O
+。 O
+柱 B-product_name
+与 O
+地 B-product_name
+面 I-product_name
+无 O
+裂 O
+缝 O
+现 O
+象 O
+或 O
+柱 B-product_name
+本 O
+身 O
+无 O
+明 O
+显 O
+变 O
+形 O
+或 O
+0 O
+. O
+3 O
+c O
+m O
+以 O
+上 O
+之 O
+裂 O
+缝 O
+。 O
+走 B-location
+廊 I-location
+柱 B-product_name
+无 O
+锐 O
+角 O
+。 O
+各 O
+楼 B-location
+层 I-location
+教 B-location
+室 I-location
+地 B-product_name
+面 I-product_name
+平 O
+坦 O
+， O
+无 O
+裂 O
+缝 O
+凹 O
+洞 O
+现 O
+象 O
+。 O
+木 B-product_name
+质 I-product_name
+地 I-product_name
+板 I-product_name
+无 O
+破 O
+损 O
+现 O
+象 O
+栏 B-product_name
+杆 I-product_name
+/ O
+楼 B-product_name
+梯 I-product_name
+/ O
+走 B-location
+廊 I-location
+。 O
+铁 B-product_name
+质 I-product_name
+栏 I-product_name
+杆 I-product_name
+和 O
+不 B-product_name
+锈 I-product_name
+钢 I-product_name
+质 I-product_name
+栏 I-product_name
+杆 I-product_name
+无 O
+断 O
+裂 O
+现 O
+象 O
+
+水 B-product_name
+泥 I-product_name
+栏 I-product_name
+杆 I-product_name
+无 O
+裂 O
+缝 O
+及 O
+倾 O
+斜 O
+现 O
+象 O
+。 O
+木 B-product_name
+质 I-product_name
+栏 I-product_name
+杆 I-product_name
+无 O
+腐 O
+烂 O
+现 O
+象 O
+。 O
+栏 B-product_name
+杆 I-product_name
+装 I-product_name
+设 I-product_name
+无 O
+松 O
+动 O
+现 O
+象 O
+。 O
+楼 B-location
+梯 I-location
+扶 B-product_name
+手 I-product_name
+无 O
+断 O
+裂 O
+破 O
+损 O
+现 O
+象 O
+。 O
+楼 B-location
+梯 I-location
+扶 B-product_name
+手 I-product_name
+间 O
+距 O
+符 O
+合 O
+规 O
+定 O
+。 O
+楼 B-location
+梯 I-location
+的 O
+地 B-location
+面 I-location
+无 O
+裂 O
+缝 O
+现 O
+象 O
+。 O
+楼 B-location
+梯 I-location
+间 O
+有 O
+装 O
+置 O
+照 B-product_name
+明 I-product_name
+设 I-product_name
+备 I-product_name
+， O
+以 O
+策 O
+安 O
+全 O
+。 O
+楼 B-location
+梯 I-location
+间 I-location
+有 O
+明 O
+显 O
+标 B-product_name
+示 I-product_name
+及 O
+标 B-product_name
+线 I-product_name
+。 O
+走 B-location
+廊 I-location
+地 B-location
+面 I-location
+平 O
+坦 O
+， O
+无 O
+裂 O
+缝 O
+凹 O
+洞 O
+现 O
+象 O
+。 O
+走 B-location
+廊 I-location
+的 O
+宽 O
+度 O
+均 O
+能 O
+合 O
+乎 O
+标 O
+准 O
+， O
+且 O
+动 B-product_name
+线 I-product_name
+标 I-product_name
+示 I-product_name
+清 O
+楚 O
+。 O
+
+校 B-location
+舍 I-location
+多 O
+次 O
+增 O
+建 O
+， O
+走 B-location
+廊 I-location
+阶 I-location
+间 I-location
+衔 O
+接 O
+处 O
+密 O
+实 O
+而 O
+安 O
+全 O
+。 O
+走 B-location
+廊 I-location
+排 O
+水 O
+正 O
+常 O
+未 O
+见 O
+积 O
+水 O
+现 O
+象 O
+地 B-product_name
+基 I-product_name
+/ O
+屋 B-product_name
+顶 I-product_name
+/ O
+管 B-product_name
+线 I-product_name
+/ O
+消 B-product_name
+防 I-product_name
+。 O
+地 B-product_name
+基 I-product_name
+牢 O
+固 O
+而 O
+无 O
+流 O
+失 O
+及 O
+毁 O
+损 O
+现 O
+象 O
+
+地 B-product_name
+基 I-product_name
+未 O
+受 O
+其 O
+他 O
+建 B-product_name
+筑 I-product_name
+校 B-location
+舍 I-location
+之 O
+影 O
+响 O
+而 O
+有 O
+所 O
+改 O
+变 O
+。 O
+地 B-location
+下 I-location
+室 I-location
+无 O
+积 O
+水 O
+且 O
+墙 B-product_name
+壁 I-product_name
+或 O
+地 B-product_name
+坪 I-product_name
+无 O
+裂 O
+缝 O
+、 O
+拱 O
+起 O
+、 O
+渗 O
+水 O
+等 O
+现 O
+象 O
+。 O
+屋 B-product_name
+顶 I-product_name
+使 O
+用 O
+（ O
+如 O
+空 B-location
+中 I-location
+花 I-location
+园 I-location
+） O
+未 O
+影 O
+响 O
+校 B-location
+舍 I-location
+建 B-product_name
+筑 I-product_name
+安 O
+全 O
+。 O
+屋 B-product_name
+顶 I-product_name
+漏 O
+水 O
+防 B-product_name
+水 I-product_name
+层 I-product_name
+表 O
+面 O
+是 O
+否 O
+损 O
+坏 O
+（ O
+如 O
+长 O
+杂 O
+草 O
+等 O
+） O
+。 O
+屋 B-product_name
+顶 I-product_name
+无 O
+裂 O
+缝 O
+及 O
+倒 O
+塌 O
+现 O
+象 O
+。 O
+屋 B-product_name
+顶 I-product_name
+的 O
+四 O
+周 O
+安 B-product_name
+全 I-product_name
+围 I-product_name
+篱 I-product_name
+、 O
+围 B-product_name
+墙 I-product_name
+或 O
+栏 B-product_name
+杆 I-product_name
+无 O
+损 O
+坏 O
+。 O
+地 B-product_name
+坪 I-product_name
+无 O
+0 O
+. O
+3 O
+c O
+m O
+以 O
+上 O
+之 O
+裂 O
+缝 O
+。 O
+排 B-product_name
+水 I-product_name
+口 I-product_name
+无 O
+阻 O
+塞 O
+积 O
+水 O
+现 O
+象 O
+。 O
+女 B-product_name
+儿 I-product_name
+墙 I-product_name
+无 O
+0 O
+. O
+3 O
+c O
+m O
+以 O
+上 O
+之 O
+裂 O
+缝 O
+或 O
+倾 O
+斜 O
+。 O
+水 B-product_name
+塔 I-product_name
+是 O
+否 O
+有 O
+裂 O
+缝 O
+。 O
+水 B-product_name
+塔 I-product_name
+固 B-product_name
+定 I-product_name
+设 I-product_name
+施 I-product_name
+是 O
+否 O
+松 O
+脱 O
+。 O
+钢 B-product_name
+棚 I-product_name
+是 O
+否 O
+锈 O
+蚀 O
+或 O
+螺 B-product_name
+栓 I-product_name
+松 O
+脱 O
+。 O
+屋 B-product_name
+顶 I-product_name
+通 I-product_name
+道 I-product_name
+门 I-product_name
+是 O
+否 O
+有 O
+变 O
+形 O
+。 O
+水 B-product_name
+路 I-product_name
+线 I-product_name
+路 I-product_name
+、 O
+电 B-product_name
+路 I-product_name
+线 I-product_name
+路 I-product_name
+、 O
+网 B-product_name
+路 I-product_name
+线 I-product_name
+路 I-product_name
+无 O
+毁 O
+损 O
+现 O
+象 O
+。 O
+电 B-product_name
+箱 I-product_name
+或 O
+管 B-product_name
+道 I-product_name
+间 O
+无 O
+损 O
+坏 O
+现 O
+象 O
+。 O
+电 B-product_name
+源 I-product_name
+线 I-product_name
+路 I-product_name
+开 B-product_name
+关 I-product_name
+及 O
+插 B-product_name
+座 I-product_name
+是 O
+否 O
+祼 O
+露 O
+及 O
+不 O
+平 O
+常 O
+状 O
+况 O
+。 O
+警 B-product_name
+报 I-product_name
+及 O
+照 B-product_name
+明 I-product_name
+设 I-product_name
+施 I-product_name
+是 O
+否 O
+正 O
+常 O
+良 O
+好 O
+。 O
+灭 B-product_name
+火 I-product_name
+器 I-product_name
+及 O
+消 B-product_name
+防 I-product_name
+箱 I-product_name
+、 O
+消 B-product_name
+防 I-product_name
+栓 I-product_name
+相 O
+关 O
+设 B-product_name
+备 I-product_name
+是 O
+否 O
+正 O
+常 O
+良 O
+好 O
+一 O
+般 O
+性 O
+要 O
+点 O
+。 O
+校 B-location
+舍 I-location
+以 O
+及 O
+各 B-location
+教 I-location
+学 I-location
+区 I-location
+， O
+有 O
+标 O
+示 O
+清 O
+楚 O
+危 O
+险 O
+地 O
+区 O
+， O
+禁 O
+止 O
+师 B-person_name
+生 I-person_name
+进 O
+入 O
+
+校 B-location
+舍 I-location
+建 B-product_name
+筑 I-product_name
+修 O
+缮 O
+时 O
+， O
+应 O
+注 O
+意 O
+安 B-product_name
+全 I-product_name
+围 I-product_name
+篱 I-product_name
+及 O
+警 B-product_name
+告 I-product_name
+标 I-product_name
+示 I-product_name
+以 O
+维 O
+安 O
+全 O
+
+学 B-location
+校 I-location
+应 O
+备 O
+有 O
+急 O
+救 O
+物 O
+品 O
+， O
+并 O
+定 O
+有 O
+送 O
+医 O
+管 O
+道 O
+以 O
+应 O
+意 O
+外 O
+伤 O
+害 O
+发 O
+生 O
+即 O
+时 O
+救 O
+助 O
+。 O
+承 B-person_name
+办 I-person_name
+人 I-person_name
+定 O
+期 O
+检 O
+查 O
+并 O
+送 O
+组 B-person_name
+长 I-person_name
+查 O
+核 O
+， O
+每 O
+周 O
+送 O
+主 B-person_name
+任 I-person_name
+查 O
+核 O
+， O
+每 O
+月 O
+送 O
+校 B-person_name
+长 I-person_name
+查 O
+核 O
+。 O
+确 O
+实 O
+执 O
+行 O
+公 O
+务 O
+保 O
+管 O
+制 O
+度 O
+， O
+实 O
+施 O
+定 O
+期 O
+与 O
+不 O
+定 O
+期 O
+保 O
+养 O
+及 O
+维 O
+修 O
+以 O
+常 O
+保 O
+安 O
+全 O
+。 O
+确 O
+实 O
+依 O
+法 O
+执 O
+行 O
+修 O
+缮 O
+办 O
+法 O
+。 O
+校 B-location
+舍 I-location
+空 I-location
+间 I-location
+无 O
+闲 O
+置 O
+情 O
+形 O
+。 O
+逃 B-product_name
+生 I-product_name
+路 I-product_name
+线 I-product_name
+与 O
+疏 B-product_name
+散 I-product_name
+路 I-product_name
+线 I-product_name
+是 O
+否 O
+推 O
+积 O
+杂 O
+物 O
+影 O
+响 O
+通 O
+行 O
+。 O
+危 O
+险 O
+物 O
+品 O
+储 O
+放 O
+及 O
+管 O
+理 O
+是 O
+否 O
+符 O
+合 O
+安 O
+全 O
+。 O
+校 B-location
+园 I-location
+内 O
+无 O
+地 B-product_name
+坪 I-product_name
+滑 O
+动 O
+、 O
+地 B-product_name
+坪 I-product_name
+塌 O
+陷 O
+现 O
+象 O
+。 O
+挡 B-product_name
+土 I-product_name
+墙 I-product_name
+、 O
+边 B-product_name
+坡 I-product_name
+无 O
+裂 O
+缝 O
+或 O
+倾 O
+斜 O
+。 O
+无 O
+基 B-product_name
+础 I-product_name
+下 O
+陷 O
+或 O
+建 B-product_name
+筑 I-product_name
+物 I-product_name
+倾 O
+斜 O
+的 O
+现 O
+象 O
+门 B-product_name
+/ O
+窗 B-product_name
+/ O
+墙 B-product_name
+/ O
+天 B-product_name
+花 I-product_name
+板 I-product_name
+/ O
+柱 B-product_name
+/ O
+地 B-product_name
+板 I-product_name
+。 O
+校 B-product_name
+门 I-product_name
+门 I-product_name
+锁 I-product_name
+警 I-product_name
+示 I-product_name
+及 O
+断 B-product_name
+电 I-product_name
+系 I-product_name
+统 I-product_name
+无 O
+损 O
+坏 O
+， O
+操 O
+作 O
+使 O
+用 O
+正 O
+常 O
+
+楼 B-product_name
+梯 I-product_name
+门 I-product_name
+、 O
+电 B-product_name
+动 I-product_name
+门 I-product_name
+（ O
+铁 B-product_name
+卷 I-product_name
+门 I-product_name
+） O
+无 O
+损 O
+坏 O
+故 O
+障 O
+， O
+使 O
+用 O
+正 O
+常 O
+， O
+电 B-product_name
+动 I-product_name
+门 I-product_name
+启 O
+动 O
+时 O
+是 O
+否 O
+有 O
+警 O
+示 O
+管 O
+理 O
+
+各 O
+类 O
+门 B-product_name
+锁 I-product_name
+（ O
+教 B-location
+室 I-LAC
+、 O
+仓 B-location
+库 I-location
+） O
+无 O
+损 O
+坏 O
+故 O
+障 O
+， O
+使 O
+用 O
+正 O
+常 O
+。 O
+窗 B-product_name
+户 I-product_name
+框 I-product_name
+无 O
+损 O
+坏 O
+故 O
+障 O
+或 O
+是 O
+变 O
+形 O
+现 O
+象 O
+， O
+使 O
+用 O
+正 O
+常 O
+。 O
+窗 B-product_name
+户 I-product_name
+玻 I-product_name
+璃 I-product_name
+无 O
+破 O
+损 O
+现 O
+象 O
+， O
+能 O
+抵 O
+挡 O
+风 O
+雨 O
+。 O
+安 O
+装 O
+防 B-product_name
+盗 I-product_name
+设 I-product_name
+施 I-product_name
+者 O
+， O
+无 O
+锈 O
+损 O
+及 O
+断 O
+裂 O
+现 O
+象 O
+。 O
+外 B-product_name
+墙 I-product_name
+是 O
+否 O
+无 O
+外 B-product_name
+砖 I-product_name
+剥 O
+落 O
+、 O
+0 O
+. O
+3 O
+c O
+m O
+以 O
+上 O
+之 O
+裂 O
+缝 O
+、 O
+油 B-product_name
+漆 I-product_name
+剥 O
+落 O
+或 O
+是 O
+油 B-product_name
+漆 I-product_name
+渗 O
+水 O
+现 O
+象 O
+。 O
+内 B-product_name
+墙 I-product_name
+无 O
+出 O
+现 O
+裂 O
+缝 O
+现 O
+象 O
+。 O
+围 B-product_name
+墙 I-product_name
+无 O
+倾 O
+斜 O
+及 O
+裂 O
+缝 O
+或 O
+混 B-product_name
+凝 I-product_name
+土 I-product_name
+剥 O
+落 O
+现 O
+象 O
+。 O
+梁 B-product_name
+无 O
+倾 O
+斜 O
+及 O
+梁 B-product_name
+无   O
+龟 O
+裂 O
+现 O
+象 O
+。 O
+天 B-product_name
+花 I-product_name
+板 I-product_name
+无 O
+呈 O
+现 O
+龟 O
+裂 O
+、 O
+钢 B-product_name
+筋 I-product_name
+外 O
+漏 O
+或 O
+锈 O
+蚀 O
+现 O
+象 O
+。 O
+天 B-product_name
+花 I-product_name
+板 I-product_name
+无 O
+漏 O
+水 O
+、 O
+混 B-product_name
+凝 I-product_name
+土 I-product_name
+剥 O
+落 O
+及 O
+明 O
+显 O
+变 O
+形 O
+或 O
+0 O
+. O
+3 O
+c O
+m O
+以 O
+上 O
+之 O
+裂 O
+缝 O
+现 O
+象 O
+。 O
+天 B-product_name
+花 I-product_name
+板 I-product_name
+油 B-product_name
+漆 I-product_name
+无 O
+脱 O
+落 O
+或 O
+掉 O
+落 O
+水 B-product_name
+泥 I-product_name
+块 I-product_name
+。 O
+天 B-product_name
+花 I-product_name
+板 I-product_name
+材 O
+质 O
+材 O
+料 O
+未 O
+被 O
+白 O
+蚁 O
+侵 O
+入 O
+或 O
+白 O
+蚁 O
+破 O
+坏 O
+。 O
+室 B-location
+内 I-location
+悬 B-product_name
+吊 I-product_name
+物 I-product_name
+（ O
+灯 B-product_name
+具 I-product_name
+、 O
+吊 B-product_name
+扇 I-product_name
+、 O
+影 B-product_name
+视 I-product_name
+设 I-product_name
+备 I-product_name
+） O
+是 O
+否 O
+松 O
+脱 O
+。 O
+柱 B-product_name
+无 O
+倾 O
+斜 O
+、 O
+龟 O
+裂 O
+、 O
+混 B-product_name
+凝 I-product_name
+土 I-product_name
+剥 O
+落 O
+及 O
+钢 B-product_name
+筋 I-product_name
+外 O
+漏 O
+或 O
+锈 O
+蚀 O
+现 O
+象 O
+。 O
+柱 B-product_name
+与 O
+地 B-product_name
+面 I-product_name
+无 O
+裂 O
+缝 O
+现 O
+象 O
+或 O
+柱 B-product_name
+本 O
+身 O
+无 O
+明 O
+显 O
+变 O
+形 O
+或 O
+0 O
+. O
+3 O
+c O
+m O
+以 O
+上 O
+之 O
+裂 O
+缝 O
+。 O
+走 B-location
+廊 I-location
+柱 B-product_name
+无 O
+锐 O
+角 O
+。 O
+各 O
+楼 B-location
+层 I-location
+教 B-location
+室 I-location
+地 B-product_name
+面 I-product_name
+平 O
+坦 O
+， O
+无 O
+裂 O
+缝 O
+凹 O
+洞 O
+现 O
+象 O
+。 O
+木 B-product_name
+质 I-product_name
+地 I-product_name
+板 I-product_name
+无 O
+破 O
+损 O
+现 O
+象 O
+栏 B-product_name
+杆 I-product_name
+/ O
+楼 B-product_name
+梯 I-product_name
+/ O
+走 B-location
+廊 I-location
+。 O
+铁 B-product_name
+质 I-product_name
+栏 I-product_name
+杆 I-product_name
+和 O
+不 B-product_name
+锈 I-product_name
+钢 I-product_name
+质 I-product_name
+栏 I-product_name
+杆 I-product_name
+无 O
+断 O
+裂 O
+现 O
+象 O
+
+水 B-product_name
+泥 I-product_name
+栏 I-product_name
+杆 I-product_name
+无 O
+裂 O
+缝 O
+及 O
+倾 O
+斜 O
+现 O
+象 O
+。 O
+木 B-product_name
+质 I-product_name
+栏 I-product_name
+杆 I-product_name
+无 O
+腐 O
+烂 O
+现 O
+象 O
+。 O
+栏 B-product_name
+杆 I-product_name
+装 I-product_name
+设 I-product_name
+无 O
+松 O
+动 O
+现 O
+象 O
+。 O
+楼 B-location
+梯 I-location
+扶 B-product_name
+手 I-product_name
+无 O
+断 O
+裂 O
+破 O
+损 O
+现 O
+象 O
+。 O
+楼 B-location
+梯 I-location
+扶 B-product_name
+手 I-product_name
+间 O
+距 O
+符 O
+合 O
+规 O
+定 O
+。 O
+楼 B-location
+梯 I-location
+的 O
+地 B-location
+面 I-location
+无 O
+裂 O
+缝 O
+现 O
+象 O
+。 O
+楼 B-location
+梯 I-location
+间 O
+有 O
+装 O
+置 O
+照 B-product_name
+明 I-product_name
+设 I-product_name
+备 I-product_name
+， O
+以 O
+策 O
+安 O
+全 O
+。 O
+楼 B-location
+梯 I-location
+间 I-location
+有 O
+明 O
+显 O
+标 B-product_name
+示 I-product_name
+及 O
+标 B-product_name
+线 I-product_name
+。 O
+走 B-location
+廊 I-location
+地 B-location
+面 I-location
+平 O
+坦 O
+， O
+无 O
+裂 O
+缝 O
+凹 O
+洞 O
+现 O
+象 O
+。 O
+走 B-location
+廊 I-location
+的 O
+宽 O
+度 O
+均 O
+能 O
+合 O
+乎 O
+标 O
+准 O
+， O
+且 O
+动 B-product_name
+线 I-product_name
+标 I-product_name
+示 I-product_name
+清 O
+楚 O
+。 O
+
+校 B-location
+舍 I-location
+多 O
+次 O
+增 O
+建 O
+， O
+走 B-location
+廊 I-location
+阶 I-location
+间 I-location
+衔 O
+接 O
+处 O
+密 O
+实 O
+而 O
+安 O
+全 O
+。 O
+走 B-location
+廊 I-location
+排 O
+水 O
+正 O
+常 O
+未 O
+见 O
+积 O
+水 O
+现 O
+象 O
+地 B-product_name
+基 I-product_name
+/ O
+屋 B-product_name
+顶 I-product_name
+/ O
+管 B-product_name
+线 I-product_name
+/ O
+消 B-product_name
+防 I-product_name
+。 O
+地 B-product_name
+基 I-product_name
+牢 O
+固 O
+而 O
+无 O
+流 O
+失 O
+及 O
+毁 O
+损 O
+现 O
+象 O
+
+地 B-product_name
+基 I-product_name
+未 O
+受 O
+其 O
+他 O
+建 B-product_name
+筑 I-product_name
+校 B-location
+舍 I-location
+之 O
+影 O
+响 O
+而 O
+有 O
+所 O
+改 O
+变 O
+。 O
+地 B-location
+下 I-location
+室 I-location
+无 O
+积 O
+水 O
+且 O
+墙 B-product_name
+壁 I-product_name
+或 O
+地 B-product_name
+坪 I-product_name
+无 O
+裂 O
+缝 O
+、 O
+拱 O
+起 O
+、 O
+渗 O
+水 O
+等 O
+现 O
+象 O
+。 O
+屋 B-product_name
+顶 I-product_name
+使 O
+用 O
+（ O
+如 O
+空 B-location
+中 I-location
+花 I-location
+园 I-location
+） O
+未 O
+影 O
+响 O
+校 B-location
+舍 I-location
+建 B-product_name
+筑 I-product_name
+安 O
+全 O
+。 O
+屋 B-product_name
+顶 I-product_name
+漏 O
+水 O
+防 B-product_name
+水 I-product_name
+层 I-product_name
+表 O
+面 O
+是 O
+否 O
+损 O
+坏 O
+（ O
+如 O
+长 O
+杂 O
+草 O
+等 O
+） O
+。 O
+屋 B-product_name
+顶 I-product_name
+无 O
+裂 O
+缝 O
+及 O
+倒 O
+塌 O
+现 O
+象 O
+。 O
+屋 B-product_name
+顶 I-product_name
+的 O
+四 O
+周 O
+安 B-product_name
+全 I-product_name
+围 I-product_name
+篱 I-product_name
+、 O
+围 B-product_name
+墙 I-product_name
+或 O
+栏 B-product_name
+杆 I-product_name
+无 O
+损 O
+坏 O
+。 O
+地 B-product_name
+坪 I-product_name
+无 O
+0 O
+. O
+3 O
+c O
+m O
+以 O
+上 O
+之 O
+裂 O
+缝 O
+。 O
+排 B-product_name
+水 I-product_name
+口 I-product_name
+无 O
+阻 O
+塞 O
+积 O
+水 O
+现 O
+象 O
+。 O
+女 B-product_name
+儿 I-product_name
+墙 I-product_name
+无 O
+0 O
+. O
+3 O
+c O
+m O
+以 O
+上 O
+之 O
+裂 O
+缝 O
+或 O
+倾 O
+斜 O
+。 O
+水 B-product_name
+塔 I-product_name
+是 O
+否 O
+有 O
+裂 O
+缝 O
+。 O
+水 B-product_name
+塔 I-product_name
+固 B-product_name
+定 I-product_name
+设 I-product_name
+施 I-product_name
+是 O
+否 O
+松 O
+脱 O
+。 O
+钢 B-product_name
+棚 I-product_name
+是 O
+否 O
+锈 O
+蚀 O
+或 O
+螺 B-product_name
+栓 I-product_name
+松 O
+脱 O
+。 O
+屋 B-product_name
+顶 I-product_name
+通 I-product_name
+道 I-product_name
+门 I-product_name
+是 O
+否 O
+有 O
+变 O
+形 O
+。 O
+水 B-product_name
+路 I-product_name
+线 I-product_name
+路 I-product_name
+、 O
+电 B-product_name
+路 I-product_name
+线 I-product_name
+路 I-product_name
+、 O
+网 B-product_name
+路 I-product_name
+线 I-product_name
+路 I-product_name
+无 O
+毁 O
+损 O
+现 O
+象 O
+。 O
+电 B-product_name
+箱 I-product_name
+或 O
+管 B-product_name
+道 I-product_name
+间 O
+无 O
+损 O
+坏 O
+现 O
+象 O
+。 O
+电 B-product_name
+源 I-product_name
+线 I-product_name
+路 I-product_name
+开 B-product_name
+关 I-product_name
+及 O
+插 B-product_name
+座 I-product_name
+是 O
+否 O
+祼 O
+露 O
+及 O
+不 O
+平 O
+常 O
+状 O
+况 O
+。 O
+警 B-product_name
+报 I-product_name
+及 O
+照 B-product_name
+明 I-product_name
+设 I-product_name
+施 I-product_name
+是 O
+否 O
+正 O
+常 O
+良 O
+好 O
+。 O
+灭 B-product_name
+火 I-product_name
+器 I-product_name
+及 O
+消 B-product_name
+防 I-product_name
+箱 I-product_name
+、 O
+消 B-product_name
+防 I-product_name
+栓 I-product_name
+相 O
+关 O
+设 B-product_name
+备 I-product_name
+是 O
+否 O
+正 O
+常 O
+良 O
+好 O
